# reto502_deployment

./: .gitignore  README.md
api_container/: Dockerfile
api_container/app/: api.py  models.py  requirements.txt
pipeline_container/: requirements.txt
pipeline_container/ts-forecast-pipeline/: pyproject.toml  session_store.db
pipeline_container/ts-forecast-pipeline/conf/base/: catalog.yml
pipeline_container/ts-forecast-pipeline/src/ts_forecast_pipeline/pipelines/preprocess_data/: nodes.py
pipeline_dev/: requirements.txt
pipeline_dev/ts-forecast-pipeline/: requirements.txt  session_store.db  stats.json
pipeline_dev/ts-forecast-pipeline/conf/base/: catalog.yml
pipeline_dev/ts-forecast-pipeline/src/ts_forecast_pipeline/pipelines/preprocess_data/: nodes.py  params.py  pipeline.py
pipeline_dev_container/ts-forecast-pipeline/: README.md  requirements.txt  session_store.db
pipeline_dev_container/ts-forecast-pipeline/conf/: logging.yml
pipeline_dev_container/ts-forecast-pipeline/src/ts_forecast_pipeline/: __init__.py  __main__.py
pipeline_use/: Dockerfile  requirements.txt
pipeline_use_container/: Dockerfile  stats.json
web-app/: data.json  preprocessed_data.csv  requirements.txt  web_app.py
